--- a/css/style.css
+++ b/css/style.css
@@ -544,7 +544,7 @@ font-family: Arial;
 /*---------------- Form Home Styling ------------------- */
 
 .form .hero-section {
-	background:url(../images/header-bg.jpg);
+	background:url(../images/BRKN-15.jpg);
 	background-size: cover;
 	padding: 150px 0 0 0;
 }
